Fix overflow on board

--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,7 @@ body {
 }
 
 .board {
+  overflow: hidden;
   border-radius: 5px;
   background-color: white;
   border-collapse: collapse;
